--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "moralis": "^2.6.6",
+    "moralis-v1": "^1.11.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
